Completed a test for PDFConverter and began another one. Also reverted gradle to 8.2 from 9.something due to javamodules (or something) not being compatible.