@@ -1,8 +1,8 @@
 plugins {
   id 'java'
   id 'application'
-  id 'org.javamodularity.moduleplugin' version '1.8.12'
-  id 'org.openjfx.javafxplugin' version '0.0.13'
+//  id 'org.javamodularity.moduleplugin' version '1.8.12'
+  id 'org.openjfx.javafxplugin' version '0.1.0'
   id 'org.beryx.jlink' version '2.25.0'
 }
 
@@ -17,8 +17,17 @@ ext {
   junitVersion = '5.10.0'
 }
 
-sourceCompatibility = '19'
-targetCompatibility = '19'
+
+java {
+
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(19)
+    }
+
+    sourceCompatibility = JavaVersion.VERSION_19
+    targetCompatibility = JavaVersion.VERSION_19
+
+}
 
 tasks.withType(JavaCompile) {
   options.encoding = 'UTF-8'
@@ -42,7 +51,11 @@ dependencies {
 }
 
 test {
-useJUnitPlatform()}
+    useJUnitPlatform()
+    jvmArgs += [
+            '--add-opens', 'groupsix.resume/groupsix.resume=ALL-UNNAMED'
+    ]
+}
 
 jlink {
   imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
